fix: consera links sub menu laços de repetição

--- a/lacos-de-repeticao.html
+++ b/lacos-de-repeticao.html
@@ -17,10 +17,10 @@
         <h1 class="title">Laços de repetição</h1>
         <hr>
 
-        <h2 class="subtitle">O que são laços de repetição?</h2>
+        <h2 class="subtitle" id="o-que-sao-lacos-de-repeticao">O que são laços de repetição?</h2>
         <p class="description">Laços de repetições permitem que um conjunto de instruções seja repetido enquanto a condição dada for verdadeira. Ele é útil para executar tarefas repetitivas onde o número de iterações não é conhecido previamente e depende de uma condição dinâmica.</p>
 
-        <h2 class="subtitle">Tipos de laço de repetição</h2>
+        <h2 class="subtitle" id="tipos-de-lacos-de-repeticao">Tipos de laço de repetição</h2>
         <h3 class="subtitle-2">Laço de repetição while</h3>
         <p class="description">O significado de while é "enquanto". O comando while permite que um certo trecho de programa seja executado ENQUANTO uma certa condição for verdadeira. A forma do comando while é a seguinte:</p>
         <img src="./img/lacos-de-repeticao/exemplo-while.png" alt="Exemplo de código while" class="ilustration">
