content: adiciona a página sobre a equipe

--- a/componentes-basicos.html
+++ b/componentes-basicos.html
@@ -20,9 +20,11 @@
         <h2 class="subtitle" id="principais-componentes">Quais os princpais componentes e pra que eles servem?</h2>
         <h3 class="subtitle-2">LEDs</h3>
         <p class="description">O termo LED significa “Light Emitting Diode” (Diodo Emissor de Luz, em português). Esse componente converte eletricidade em luz, e consome menos energia do que fontes de iluminação tradicionais, como lâmpadas incandescentes e fluorescentes. </p>
+        <img src="./img/componentes-basicos/led.png" alt="" class="ilustration">
 
         <h3 class="subtitle-2">Resistores</h3>
         <p class="description">Resistores são dispositivos elétricos que compõem circuitos com a finalidade básica de transformar energia elétrica em calor ou mudar o valor da ddp. Resistores são dispositivos que compõem circuitos elétricos diversos, a sua finalidade básica é a conversão de energia elétrica em energia térmica (Efeito Joule). </p>
+        <img src="./img/componentes-basicos/resistor.png" alt="" class="ilustration">
 
         <h3 class="subtitle-2">Sensores</h3>
         <p class="description">Os sensores são conhecidos pela sua capacidade de detectar estímulos físicos, químicos ou biológicos e dar respostas por meio de sinais de advertência. Atualmente, existem sensores para os mais diversos usos, como em portas, leitores de código de barras, elevadores, automóveis, equipamentos médicos, agrícolas, etc. </p>
@@ -32,12 +34,14 @@
 
         <h3 class="subtitle-2">Bateria</h3>
         <p class="description">As baterias são conjuntos de pilhas ligadas em série, ou seja, são dispositivos eletroquímicos nos quais ocorrem reações de oxidorredução, produzindo uma corrente elétrica. Podem ser chamadas ainda de pilhas secundárias, baterias secundárias ou acumuladores. </p>
+        <img src="./img/componentes-basicos/bateria.png" alt="" class="ilustration">
 
         <h3 class="subtitle-2">Motor CC/DC</h3>
         <p class="description">Cc é abreviação para centímetros cúbicos, que se refere à cilindrada do motor. Pela cilindrada você sabe a soma do volume interno dos cilindros, que pode ser expressa em cm3 (ou polegadas cúbicas) ou em litros. O Motor DC é bastante utilização em automação e robótica. É um motor compacto que pode ser utilizado em diversos projetos, como por exemplo, carro eletrônico. O motor DC é composto por uma caixa de redução com engrenagens que permitem a redução da rotação. </p>
 
         <h3 class="subtitle-2">Botões, Interruptores</h3>
         <p class="description">Interruptores são dispositivos extremamente úteis, tendo a função de ligar ou desligar circuitos elétricos. Sendo usados nas entradas de rede, em pontos intermediários, entradas de aparelhos e máquinas, resumidamente: em todos locais que são necessários a ligação ou o desligamento da energia elétrica. As botoeiras são dispositivos de acionamento manual, muito utilizadas em máquinas e equipamentos, para a partida, parada e outras funções de comando. Os tipos mais comuns são modulares, compostos por partes que podem ser combinadas de diversas formas. </p>
+        <img src="./img/componentes-basicos/botão.png" alt="" class="ilustration">
 
         <h3 class="subtitle-2">Display</h3>
         <p class="description">Trata-se então de um dispositivo que é utilizado para emitir imagens, ou seja, de compartilhar informações visuais. Os displays podem ser encontrados já embutidos nos dispositivos eletrônicos populares, mas também estão disponíveis em peças avulsas, para usos mais específicos. </p>
@@ -50,6 +54,7 @@
 
         <h3 class="subtitle-2">Atuadores</h3>
         <p class="description">Os atuadores são os maquinários que causam o movimento. Eles vão converter energia, que pode ser elétrica, hidráulica ou pneumática, para fazer isso. E é por meio desse processo de transformação dessas energias que se realiza o movimento, ou o que podemos chamar de energia mecânica. </p>
+        <img src="./img/componentes-basicos/atuadores.png" alt="" class="ilustration">
 
         <footer class="footer"></footer>
     </section>
