fix: altera placeholder do Vitor Mayer na pag sobre

--- a/sobre-a-equipe.html
+++ b/sobre-a-equipe.html
@@ -58,7 +58,7 @@
                 <img src="none.png" alt="" class="profile-picture">
                 <h3 class="card-member-name">Vitor Mayer</h3>
                 <h4 class="function">Pesquisador</h4>
-                <p class="card-description">Faço Engenharia de Software, pois vejo grandes oportunidades de conseguir trabalhar em qualquer lugar do mundo, com oportunidade de criar minha própria empresa de TI. Olhando para o futuro onde a tecnologia está cada vez mais presente no nosso dia a dia.</p>
+                <p class="card-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus asperiores dolor modi tempore cumque sapiente quibusdam, perspiciatis, iste dolores minus quae totam ea eius laborum repudiandae, excepturi officiis est cum.</p>
             </div>
         </div>
         <footer class="footer"></footer>
