fix: Todos os links externos abrem em nova guia

--- a/logica-geral.html
+++ b/logica-geral.html
@@ -27,7 +27,7 @@
             E sabia que a lógica também é importante na computação? Quando criamos programas de computador, usamos a lógica para garantir que tudo funcione corretamente. É como seguir um plano passo a passo, chamado algoritmo, para que o computador entenda o que fazer.  
         </p>
         <p class="description">
-            <strong>Saiba mais</strong>: <a href="https://www.significados.com.br/logica/" class="link">https://www.significados.com.br/logica/</a> 
+            <strong>Saiba mais</strong>: <a href="https://www.significados.com.br/logica/" target="_blank" class="link">https://www.significados.com.br/logica/</a> 
         </p>
         <h3>Veja o vídeo</h3>
         <div class="video">
