--- a/simuladores-robotica.html
+++ b/simuladores-robotica.html
@@ -18,7 +18,7 @@
         <hr>
 
         <h2 class="subtitle" id="utilizado-simulador-de-robotica">Utilizando simulador de robótica</h2>
-        <p class="description">Para o desenvolvimento de robôs é muito importante ter um projeto. Algo que pode facilitar esse processo de criação são os simuladores de robótica. Aqui utilizaremos o <a href="" class="link">Tinkercad</a> para simular os componentes e os códigos.</p>
+        <p class="description">Para o desenvolvimento de robôs é muito importante ter um projeto. Algo que pode facilitar esse processo de criação são os simuladores de robótica. Aqui utilizaremos o <a href="https://www.tinkercad.com/" target="_blank" class="link">Tinkercad</a> para simular os componentes e os códigos.</p>
         <p class="description">Vamos por a mão na massa? O primeiro projeto que iremos criar é um sistema que acende e apaga um LED. A construção da eletrônica é a seguinte:</p>
         <img src="./img/simuladores-robotica/imagens-protoboard/protoboard-1.png" alt="" class="ilustration">
         <p class="description-2">O código utilizado para fazê-lo funcionar foi:</p>
