--- a/linguagem-de-programacao-c.html
+++ b/linguagem-de-programacao-c.html
@@ -17,7 +17,7 @@
         <h1 class="title">Linguagem de Programação C</h1>
         <hr>
         <h2 class="subtitle" id="o-que-e-linguagem-c">O que é linguagem C?</h2>
-        <p class="description">A linguagem C foi criada por <a href="https://pt.wikipedia.org/wiki/Dennis_Ritchie" class="link">Dennis Ritchie</a> nos laboratórios da Bell Telephone em 1972. C foi criado com um propósito: ser usado no desenvolvimento de uma nova versão do sistema operacional Unix. A primeira versão do Unix utilizava Assembly. Então podemos dizer que desde o principio C foi uma linguagem criada por programadores para programadores.</p>
+        <p class="description">A linguagem C foi criada por <a href="https://pt.wikipedia.org/wiki/Dennis_Ritchie" target="_blank" class="link">Dennis Ritchie</a> nos laboratórios da Bell Telephone em 1972. C foi criado com um propósito: ser usado no desenvolvimento de uma nova versão do sistema operacional Unix. A primeira versão do Unix utilizava Assembly. Então podemos dizer que desde o principio C foi uma linguagem criada por programadores para programadores.</p>
         <p class="description">A linguagem C é considerada de propósito geral, ou seja é uma linguagem capaz de ser usada para praticamente qualquer tipo de projeto. É extremamente portável, ou seja um programa escrito em linguagem C pode ser facilmente usado em qualquer plataforma. Utilizando linguagem C podemos criar sistemas operacionais, aplicativos de todos os tipos, drivers e outros controladores de dispositivos, programar microcontroladores, etc.</p>
         <p class="description">Além de toda essa flexibilidade, C é capaz de gerar programas extremamente rápidos em tempo de execução, possui uma sintaxe simples e poderosa, com instruções de alto nível. A linguagem C influenciou de forma direta muitas linguagens como C++, Java, C# , Objective C, e muitas outras linguagens de programação tem sua sintaxe e estruturas influenciadas por C. C é uma linguagem extremamente popular e existem muitos compiladores C disponíveis para todas as plataformas.</p>
         
@@ -32,7 +32,7 @@
         <p class="description">Se não houver erros, o compilador cria um programa em disco com o sufixo OBJ, contendo as instruções já traduzidas. Este programa não pode ser executado até que sejam agregadas a ele as funções em linguagem de máquina que foram utilizadas no programa e estão em arquivos de bibliotecas. Este trabalho é feito por um programa chamado linkeditor, que, além de juntar as funções necessárias ao programa OBJ, cria um produto final em disco com o sufixo .EXE, o qual pode ser executado diretamente do sistema operacional. Um compilador não criará um programa em linguagem de máquina antes que esteja absolutamente livre de erros.</p>
         <h3 class="subtitle-2">Fontes</h3>
         <ul class="content-list">
-            <li><a href="https://linguagemc.com.br/o-que-e-linguagem-c/ " class="link">https://linguagemc.com.br/o-que-e-linguagem-c/ </a></li>
+            <li><a href="https://linguagemc.com.br/o-que-e-linguagem-c/" target="_blank" class="link">https://linguagemc.com.br/o-que-e-linguagem-c/ </a></li>
             <li><p class="description-2">Livro: Treinamento em Liguagem C (2º Edição) Autora: Victorine Viviane</p></li>
         </ul>
 
@@ -341,12 +341,12 @@
 
         <h2 class="subtitle" id="por-onde-comecar">Por onde começar?</h2>
 
-        <p class="description">Se você está começando do zero absoluto e quer aprender a programar, os conteúdos que você viu acima é um breve resumo das funções e dos códigos que existe nesse imenso mundo da programação. Para que você comece a praticar a construção de programas pequenos e de complexidades “simples”, recomendamos que você abaixe um editor de código e o compilador (software). É importante lembrar que o compilador não leva em consideração a lógica aplicada ao programa, então, casp haja algum erro de lógica, o compilador não irá detectar. O editor de código que recomendamos é o <a href="https://sourceforge.net/projects/embarcadero-devcpp/files/v6.3/Embarcadero_Dev-Cpp_6.3_TDM-GCC_9.2_Setup.exe/download" class="link">DEV C++</a>. Ele já vem com compilador C e C++.</p>
+        <p class="description">Se você está começando do zero absoluto e quer aprender a programar, os conteúdos que você viu acima é um breve resumo das funções e dos códigos que existe nesse imenso mundo da programação. Para que você comece a praticar a construção de programas pequenos e de complexidades “simples”, recomendamos que você abaixe um editor de código e o compilador (software). É importante lembrar que o compilador não leva em consideração a lógica aplicada ao programa, então, casp haja algum erro de lógica, o compilador não irá detectar. O editor de código que recomendamos é o <a href="https://sourceforge.net/projects/embarcadero-devcpp/files/v6.3/Embarcadero_Dev-Cpp_6.3_TDM-GCC_9.2_Setup.exe/download" target="_blank" class="link">DEV C++</a>. Ele já vem com compilador C e C++.</p>
 
         <p class="description">Para aprender a programar, é muito importante a prática. Então, após instalar seu editor de código e compilador, recomendamos você a por a mão na massa. Abaixo deixaremos listado alguns links contendo exercícios para prática:</p>
         <ul class="content-list">
-            <li><p class="description-2"><a href="https://www.w3schools.com/c/c_getstarted.php" class="link">W3Schools - C Get Started.</a></p></li>
-            <li><p class="description-2"><a href="https://www.w3schools.com/c/exercise.php?filename=exercise_syntax1" class="link">W3Schools - Exercício de sintaxe.</a></p></li>
+            <li><p class="description-2"><a href="https://www.w3schools.com/c/c_getstarted.php" target="_blank" class="link">W3Schools - C Get Started.</a></p></li>
+            <li><p class="description-2"><a href="https://www.w3schools.com/c/exercise.php?filename=exercise_syntax1" target="_blank" class="link">W3Schools - Exercício de sintaxe.</a></p></li>
         </ul>
 
         <p class="description">Começando em pequenos passo, exercitando pequenas programas, vai gerar a confiança e aumenta-los, e cada vez mais incrementa-los dependendo da necessidade de resolução do problema. Se não se sentir confiante pratique os exercícios dos links, se faltar confiança ou informações adicionais além do material desse site, recomendamos alugar na biblioteca ou adquirir o livro Treinamento em Linguagem C, Edição 2º, da autora Viviane Mizrahi.</p>
