fix: Conserta responsividade da página sobre
Adiciona responsividade da página sobre, para mobile

--- a/sobre-a-equipe.html
+++ b/sobre-a-equipe.html
@@ -16,6 +16,7 @@
     <section class="content">
         <h1 class="title">Sobre a equipe</h1>
         <hr>
+        <h2 class="subtitle">Membros da equipe:</h2>
         <div class="cards-container">
             <div class="card">
                 <img src="./img/equipe/eduardo-300.jpg" alt="" class="profile-picture">
